force-app/main/default/objects/ADD_Product__c/ADD_Product__c.object-meta.xml
<CustomObject>
    <label>ADD Product</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ADD Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADD Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>