force-app/main/default/objects/ADD_Product__c/fields/ADD_Product_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>ADD_Product_Ext_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ADD Product Ext Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>